--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -33,7 +33,7 @@
                     <a href="#" rel="#pop_up_4">Вопрос</a>
                  </div>
              {% else %}
-               <span>Вход</span>
+               <span id="login">Войти</span>
                  <div class="setup_user" style="display:none">
                     <a href="#" rel="#pop_up_1">Регистрация</a>
                     <a href="#" rel="#pop_up_2">Вход</a>
