--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="head-buttons">
-        <a href="{% url ncalc_step1 %}" id="calc-link"><img src="{{ STATIC_URL }}images/calc_icon.png" alt="" /></a>
+        <a href="{% url ncalc_step1_kasko %}" id="calc-link"><img src="{{ STATIC_URL }}images/calc_icon.png" alt="" /></a>
         <a href="{% url userprofile_edit %}" id="wallet-link"><img src="{{ STATIC_URL }}images/wallet_icon.png" alt="" /></a>
 
         <div id="account-link">
