Proper visual class. ref #66

--- a/insurance/templates/calc/osago/step1.html
+++ b/insurance/templates/calc/osago/step1.html
@@ -155,7 +155,7 @@
                     {{ s1_form.country.label }}
                     <span class="table-error">{{ s1_form.country.errors }}</span>
                 </td>
-                <td class="visible-data">
+                <td class="visible-data second">
                     <div class="visual">
                     <select id="id_country" name="country">
                         <option value="">--------</option>
