--- a/insurance/templates/calc/kasko/step1.html
+++ b/insurance/templates/calc/kasko/step1.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "calc/calc.html" %}
 {% block extra_head %}
     <script type="text/javascript" src="/static/js/calc/calc.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
@@ -160,20 +160,8 @@
     </script>
 {% endblock %}
 
-{% block content %}
-    <div id="overlay"><img src="/static/images/preloader.gif" alt=""/></div>
+{% block tab_content %}
 
-    <div id="calc-tabs">
-    <ul>
-        <li><a href="#tabs-1">КАСКО</a></li>
-        <li><a href="#tabs-2">ОСАГО</a></li>
-        <li><a href="#tabs-3">ДМС</a></li>
-        <li><a href="#tabs-5">HC</a></li>
-        <li><a href="#tabs-6">ВЗР</a></li>
-        <li><a href="#tabs-7">ИФЛ</a></li>
-    </ul>
-
-    <div id="tabs-1">
     <form action="" method="post" id="form-step1">
     {% csrf_token %}
 
@@ -398,7 +386,6 @@
     <a href="{% url cleansession %}">очистить введенные данные</a>
     </div>
 
-</div>
 {% endblock %}
 
 
