--- a/insurance/apps/notification/templates/notification/notices.html
+++ b/insurance/apps/notification/templates/notification/notices.html
@@ -5,7 +5,7 @@
   <div class="tabs_box">
     <ul class="tabs">
       <li><a href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-      <li><a href="#">МОИ ПОЛИСЫ</a></li>
+      <li><a href="{% url userprofile_policylist %}">МОИ ПОЛИСЫ</a></li>
       <li><a class="active" href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
       <li><a href="#">FAQ</a></li>
     </ul>
@@ -13,9 +13,9 @@
     <div id="tabs_cont_1" class="bg_tabs_f">
       <div class="bg_tabs_t">
         <div class="bg_tabs_b">
-			<br/><br/><br/>
+            <br/><br/><br/>
           <div class="tabs2">
-			   <div id="tabs_cont3_1" class="bg_tabs3_box">
+               <div id="tabs_cont3_1" class="bg_tabs3_box">
               <div class="bg_tabs2_f">
                 <div class="cont_text">
 <div id="ins_notification_inbox">
@@ -27,20 +27,20 @@
       <th>Дата</th>
     </tr>
     {% for notice in notices %}
-	<tr class="{% cycle 'odd' 'nodd' %}{% if notice.unseen %} unread{% endif %}">
-	  <td>{{ notice.sub }}</a></td>
-	  <td><a href="{% url notification_notice notice.id %}">{{ notice.message|truncatewords_html:"4" }}</a></td>
-	  <td>{{ notice.added }}</td>
-	</tr>
-	{% endfor %}
-	
+    <tr class="{% cycle 'odd' 'nodd' %}{% if notice.unseen %} unread{% endif %}">
+      <td>{{ notice.sub }}</a></td>
+      <td><a href="{% url notification_notice notice.id %}">{{ notice.message|truncatewords_html:"4" }}</a></td>
+      <td>{{ notice.added }}</td>
+    </tr>
+    {% endfor %}
+
   </table>
 
   <div id="buttons">
-    <a href="{% url ins_notification_question %}">Задать вопрос</a> | 
+    <a href="{% url ins_notification_question %}">Задать вопрос</a> |
     <a href="{% url userprofile_edit %}">Назад</a>
 </div>
-    
+
   </div>
 
 </div>  </div>
