Allowed to use different servlet urls. ref #65

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -43,7 +43,8 @@ SERVLET_DB = 'inservlet'
 SERVLET_DB_USER = 'insdu'
 SERVLET_DB_PASS = 'insdpwd'
 
-SERVLET_URL = 'http://www.polisbook.ru:8080/ServerIF/MatrixIF'
+SERVLET_URL = {"kasko": 'http://www.polisbook.ru:8080/ServerIF/MatrixIF',
+               "osago": 'http://www.polisbook.ru:8080/ServerOsago/PB_Osago'}
 
 SERVLET_FAKE = False
 
