--- a/insurance/templates/calc/osago/step2.html
+++ b/insurance/templates/calc/osago/step2.html
@@ -117,12 +117,8 @@
                         <form action="" method="post" id="sorting">
                             {% csrf_token %}
 
-                            <table id="sort-parameters">
+                            <table id="sort-parameters" class="osago">
                                 <tr>
-                                    <td>Цена</td>
-                                    <td>
-                                        <div class="style-checkbox">{{ s1_form.factor_price }}</div>
-                                    </td>
                                     <td>Расположение</td>
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_accessibility }}</div>
@@ -131,10 +127,10 @@
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_service }}</div>
                                     </td>
-                                    <td rowspan="2">Качество информационной
+                                    <td>Качество инф.
                                         поддержки
                                     </td>
-                                    <td rowspan="2">
+                                    <td>
                                         <div class="style-checkbox">{{ s1_form.factor_qualitysupport }}</div>
                                     </td>
                                 </tr>
@@ -151,8 +147,6 @@
                                     <td>
                                         <div class="style-checkbox">{{ s1_form.factor_easepay }}</div>
                                     </td>
-                                    <td></td>
-                                    <td></td>
                                 </tr>
                             </table>
                             <a id="second-submit" href="#"><img src="/static/images/recount_button.png"
@@ -160,54 +154,16 @@
                     </div>
                     </div>
 
-                    <div class="form-round-block" id="economy-block">
-                        <h2>Экономия</h2>
-
-                        <p>Стандартная франшиза</p>
-
-
-                        <div id="franchize-container">
-                            <span id="min"></span>
-                            <span id="max"></span>
-
-                            <div id="franchize">
-                                {{ s1_form.franchise }}
-                            </div>
-                        </div>
-
-
-                        <p>Охранная система автомобиля</p>
-
-                        <div class="long-select">
-                            <span class="select-text"></span>
-                            {{ s1_form.burglar_alarm_group }}
-                        </div>
-
-                        <div class="long-select">
-                            <span class="select-text"></span>
-                            {{ s1_form.burglar_alarm_model }}
-                        </div>
-
-
-                        <p><input type="image" src="/static/images/update_button.png" value="Обновить"/></p>
-                    </div>
                     </form>
 
                     <div id="result-table-step2">
                         <!-- Beginning of Client Side Image Map -->
-                        <img id="map-image" src="/static/images/result_table_header.png" usemap="#result_table_header"
-                             border=0>
+                        <img id="map-image" src="/static/images/result_table_header_osago.png" usemap="#map-table" border=0>
 
                         <map id="map-table" name="result_table_header">
                             <area shape="poly"
-                                  coords="202,164,201,161,203,154,214,141,240,113,267,83,296,50,320,20,330,9,330,5,329,3,329,2,385,2,385,5,385,9,383,13,351,50,306,102,260,155,258,160,258,162,259,164,259,166,203,166,202,164,202,159"
-                                  href="#" alt="{{ header.Evacuator.comment }}" title="">
-                            <area shape="poly"
-                                  coords="320,166,316,163,317,158,321,153,336,135,357,113,381,85,407,54,427,30,442,13,445,7,443,1,387,1,388,4,386,12,369,28,333,73,300,111,276,138,259,156,259,161,261,165,319,165"
-                                  href="#" alt="{{ header.TheEmergencyCommissioner.comment }}" title="">
-                            <area shape="poly"
                                   coords="321,165,318,162,319,156,434,24,446,10,447,4,443,1,501,1,502,4,500,9,498,11,501,4,502,8,498,14,374,158,374,161,375,165,376,166,319,166"
-                                  href="#" alt="{{ header.PaymentWithoutInquiries.comment }}" title="">
+                                  href="#" alt="{{ header.TheEmergencyCommissioner.comment }}" title="">
                             <area shape="poly"
                                   coords="431,162,433,157,554,17,560,11,561,7,560,4,560,1,504,2,504,4,504,6,503,11,378,155,376,158,376,162,376,165,434,165"
                                   href="#" alt="{{ header.GatheringOfInquiries.comment }}" title="">
@@ -220,7 +176,7 @@
                         <div id="autodata-step1">
                             Вы страхуете:
                             <span>{{ data.mark }} {{ data.model }}</span>
-                            {{ data.model_year }} года, {{ data.price }} руб.
+                            {{ data.model_year }} года
                         </div>
 
                         <table border="1">
@@ -230,7 +186,7 @@
                                         {{ forloop.counter }}
                                     </td>
                                     <td>
-                                        <div class="company-data">
+                                        <div class="company-data-osago">
                                             <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}"
                                                  alt="{{ comp.full_name }}"/>
                                             <img src="/static/images/stars_temp.png" alt="" />
@@ -246,18 +202,7 @@
                                         </div>
                                     </td>
                                     <td class="small">
-                                        {% if comp.parameters.Evacuator %}
-                                            <img src="/static/images/check_mark.png" alt="да"/>
-                                        {% endif %}
-                                    </td>
-                                    <td class="small">
                                         {% if comp.parameters.TheEmergencyCommissioner %}
-                                            <img src="/static/images/check_mark.png" alt="да"/>
-                                        {% endif %}
-                                    </td>
-
-                                    <td class="small">
-                                        {% if comp.parameters.PaymentWithoutInquiries %}
                                             <img src="/static/images/check_mark.png" alt="да"/>
                                         {% endif %}
                                     </td>
@@ -276,7 +221,7 @@
                                         <div class="ourscore">{{ comp.ourscore }}</div>
                                         <div class="score">{{ comp.score }}</div>
                                         <a class="order-button"
-                                           href="{% url ncalc_step3_kasko comp.alias %}"></a>
+                                           href="{% url ncalc_step3_osago comp.alias %}"></a>
                                     </td>
                                 </tr>
                             {% endfor %}
